--- a/angular.json
+++ b/angular.json
@@ -20,25 +20,23 @@
             "outputPath": "dist/videoflix_frontend",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/cyan-orange.css",
               "node_modules/video.js/dist/video-js.css",
               "src/styles.scss"
             ],
-            "scripts": [
-              "node_modules/video.js/dist/video.js"
-            ]
+            "scripts": ["node_modules/video.js/dist/video.js"]
           },
           "configurations": {
             "production": {
@@ -82,26 +80,23 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/cyan-orange.css",
               "node_modules/video.js/dist/video-js.css",
               "src/styles.scss"
             ],
-            "scripts": [
-              "node_modules/video.js/dist/video.js"
-            ]
+            "scripts": ["node_modules/video.js/dist/video.js"]
           }
         }
       }
