--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular-devkit/build-angular": "^18.0.7",
     "@angular/cli": "^18.0.7",
     "@angular/compiler-cli": "^18.0.6",
+    "@babel/helper-annotate-as-pure": "^7.24.7",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
